@@ -1,10 +1,14 @@
 =Upcoming=
 New Windows Games:
+* The 11th Hour (GoG only)
+* Journeyman Project 3: Legacy of Time (GoG only)
 * Max Payne 3
 * Pirates of Black Cove
 * Port Royale 3: Pirates & Merchants
+* Quantum Conundrum (Steam only)
 Updated Windows Games:
 * Assassin's Creed: Brotherhood - Added XP path
+* Dreamfall: The Longest Journery - Added GoG info
 =2012/7/18=
 New Windows Games:
 * AI War: Fleet Command
